feat: complete platform integration, fix backend schema generation, and implement frontend static pages